src/main/java/com/example/biblioteca/controller/error/ResourceNotFoundException.java
package com.example.biblioteca.controller.error;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}